Initialize databases when starting containers

--- a/docker/deploy/Dockerfile
+++ b/docker/deploy/Dockerfile
@@ -7,6 +7,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         supervisor \
         nodejs npm
 
+# Initialize the database and Elasticsearch alias if
+# the user indicates that this is the first time the
+# container is being run.
+# RUN /bin/bash -c 'source env/bin/activate && bin/util/initialize_instance'
+
 # Set up Nginx & UWSGI
 RUN rm /etc/nginx/sites-enabled/default
 COPY nginx.conf /etc/nginx/conf.d/circulation.conf
@@ -23,4 +28,4 @@ RUN mkdir -p /var/log/supervisor
 COPY supervisord.conf /etc/supervisor/conf.d/
 
 EXPOSE 80
-CMD ["-c", "/usr/bin/supervisord"]
+CMD ["-c", "source env/bin/activate && if [ -f bin/util/initialize_instance ]; then bin/util/initialize_instance; fi && supervisord"]
