Only initialize databases when a FIRST_RUN container is created

--- a/docker/scripts/Dockerfile
+++ b/docker/scripts/Dockerfile
@@ -1,5 +1,6 @@
 FROM nypl/circ-base
 ENV TZ=US/Eastern
+ENV FIRST_RUN ""
 
 MAINTAINER Library Simplified <info@librarysimplified.org>
 
@@ -18,5 +19,9 @@ VOLUME /var/log
 
 WORKDIR bin
 
+# Copy over script to initialize database
+COPY libsimple_init /usr/local/bin
+RUN chmod +x /usr/local/bin/libsimple_init
+
 COPY supervisord.conf /etc/supervisor/conf.d
-CMD ["-c", "source env/bin/activate && if [ -f bin/util/initialize_instance ]; then bin/util/initialize_instance; fi && supervisord"]
+CMD ["-c", "libsimple_init && supervisord"]
