--- a/docker/deploy/Dockerfile
+++ b/docker/deploy/Dockerfile
@@ -1,4 +1,5 @@
 FROM nypl/circ-base
+ENV FIRST_RUN ""
 
 MAINTAINER Library Simplified <info@librarysimplified.org>
 
@@ -6,11 +7,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         nginx \
         supervisor \
         nodejs npm
-
-# Initialize the database and Elasticsearch alias if
-# the user indicates that this is the first time the
-# container is being run.
-# RUN /bin/bash -c 'source env/bin/activate && bin/util/initialize_instance'
 
 # Set up Nginx & UWSGI
 RUN rm /etc/nginx/sites-enabled/default
@@ -23,9 +19,13 @@ WORKDIR /var/www/circulation/api/admin
 RUN npm install
 WORKDIR ../..
 
+# Copy over script to initialize database
+COPY libsimple_init /usr/local/bin
+RUN chmod +x /usr/local/bin/libsimple_init
+
 # Set up supervisor to run the app
 RUN mkdir -p /var/log/supervisor
 COPY supervisord.conf /etc/supervisor/conf.d/
 
 EXPOSE 80
-CMD ["-c", "source env/bin/activate && if [ -f bin/util/initialize_instance ]; then bin/util/initialize_instance; fi && supervisord"]
+CMD ["-c", "libsimple_init && supervisord"]
