Stop Doing Too Much; just checkout the version

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -2,7 +2,6 @@ FROM python:2.7
 MAINTAINER Library Simplified <info@librarysimplified.org>
 
 ARG version
-ARG tags="t"
 
 # Development libraries we'll need on top of python:2.7
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -17,12 +16,8 @@ WORKDIR /var/www
 RUN git clone https://github.com/NYPL-Simplified/circulation.git
 WORKDIR circulation
 
-# Assume we're building for a tagged commit of circulation, but also
-# allow for branches or straight-up SHAs if --build-args tags=f is used
-# at build time.
-RUN /bin/bash -c 'if [[ "$tags" == "t" ]];\
-        then git checkout tags/"$version";\
-        else git checkout "$version"; fi'
+# Build the requested version of the codebase.
+RUN git checkout "$version"
 
 # Use an https link for the server_core submodule to avoid and update
 # the submodule for this version.
