Added logrotate and logrotate conf files.

--- a/docker/deploy/supervisord.conf
+++ b/docker/deploy/supervisord.conf
@@ -6,3 +6,6 @@ command=/etc/init.d/nginx start
 
 [program:uwsgi]
 command=/bin/bash -c "source /var/www/circulation/env/bin/activate && uwsgi --ini /var/www/circulation/uwsgi.ini"
+
+[program:cron]
+command=cron -f
