--- a/docker/deploy/uwsgi.ini
+++ b/docker/deploy/uwsgi.ini
@@ -15,7 +15,7 @@ socket = /var/www/circulation/%n.sock
 chmod-socket = 666
 
 #location of log files
-logto = /var/www/circulation/%n.log
+logto = /var/log/libsimple/%n.log
 log-format = %(addr) - - [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" host_hdr=%(host) req_time_elapsed=%(msecs)
 
 processes = 6
