--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,6 @@ before_script:
   - psql -c 'create user simplified_test;' -U postgres
   - psql -c 'create database simplified_core_test;' -U postgres
   - psql -c 'grant all privileges on database simplified_core_test to simplified_test;' -U postgres
-  - psql -c 'create extension pgcrypto;' -U postgres
+  - psql -c 'create extension pgcrypto;' -U postgres -d simplified_core_test
 
 script: ./test
