--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ git:
   submodules: false
 
 before_install:
+  # Access the submodule via https instead of default SSH
   - git config submodule.core.url https://github.com/NYPL-Simplified/server_core.git
   - git submodule update --init --recursive
 
