Run tests in docker containers for tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 addons:
   postgresql: "9.3"
@@ -8,6 +8,7 @@ addons:
 
 services:
   - postgresql
+  - docker
 
 language: python
 
@@ -39,6 +40,8 @@ before_script:
   - psql -c 'grant all privileges on database simplified_circulation_test to simplified_test;' -U postgres
 
 env:
- - SIMPLIFIED_TEST_DATABASE="postgres://simplified_test:test@localhost:5432/simplified_circulation_test"
+  - SIMPLIFIED_TEST_DATABASE="postgres://simplified_test:test@localhost:5432/simplified_circulation_test"
 
-script: ./verbose-test
+script:
+  - ./verbose-test
+  - ./docker-test
