Use verbose tests so we can diagnose a random hang.

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,4 @@ before_script:
 env:
  - SIMPLIFIED_TEST_DATABASE="postgres://simplified_test:test@localhost:5432/simplified_circulation_test"
 
-script: ./test
+script: TESTING=true nosetests -v tests
