--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
       - postgresql-contrib-9.3
 
 env:
-  - ES_VERSION=1.7.0 ES_DOWNLOAD_ONE=https://download.elastic.co/elasticsearch/elasticsearch/ ES_DOWNLOAD_TWO=elasticsearch-${ES_VERSION}.tar.gz
+  - ES_VERSION=1.7.0 ES_DOWNLOAD="https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz"
 
 services:
   - postgresql
