--- a/docker/services/uwsgi.ini
+++ b/docker/services/uwsgi.ini
@@ -1,21 +1,19 @@
 [uwsgi]
-#application's base folder
+# application's base folder
 base = /var/www/circulation
 home = %(base)/env
 pythonpath = %(base)
 
-#python module to import
+# python module to import
 module = api.app
 callable = app
 
-#location and permissions of socket file
-uid = simplified
-gid = www-data
+# location and permissions of socket file
 socket = /var/www/circulation/%n.sock
-chmod-socket = 660
+chmod-socket = 666
 
-#location of log files
-logto = /var/log/libsimple/%n.log
+# location of log files
+logto = /var/log/uwsgi/%n.log
 log-format = %(addr) - - [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" host_hdr=%(host) req_time_elapsed=%(msecs)
 
 processes = 6
