--- a/docker/Dockerfile.scripts
+++ b/docker/Dockerfile.scripts
@@ -12,6 +12,7 @@ ENV TZ=US/Eastern
 COPY . /ls_build
 
 RUN /bin/bash -c "/ls_build/simplified_app.sh ${repo} ${version} \
+      && /ls_build/logrotate.sh \
       && /ls_build/simplified_cron.sh \
       && rm -rf /ls_build && /bd_build/cleanup.sh"
 
@@ -19,7 +20,3 @@ VOLUME /var/log
 WORKDIR /home/simplified/circulation/bin
 
 CMD ["/sbin/my_init"]
-
-# # If you launch the container interactively with `docker run -it`,
-# # this is where you'll end up:
-# ENTRYPOINT ["/bin/bash"]
