--- a/docker/Dockerfile.deploy
+++ b/docker/Dockerfile.deploy
@@ -10,6 +10,7 @@ ENV SIMPLIFIED_DB_TASK "ignore"
 COPY . /ls_build
 
 RUN /bin/bash -c "/ls_build/simplified_app.sh ${repo} ${version} \
+      && /ls_build/logrotate.sh \
       && /ls_build/nginx.sh \
       && /ls_build/uwsgi.sh \
       && rm -rf /ls_build && /bd_build/cleanup.sh"
@@ -23,25 +24,3 @@ CMD ["/sbin/my_init"]
 # # If you launch the container interactively with `docker run -it`,
 # # this is where you'll end up:
 # ENTRYPOINT ["/bin/bash"]
-
-# # Add the logrotate.conf file.
-# COPY logrotate.conf /etc/
-# COPY default_logrotate /etc/logrotate.d/
-# 
-# # Add a logrotate file for circulation log files.
-# COPY libsimple.conf /etc/logrotate.d/
-# 
-# # Limit write access so logrotate will use the config files.
-# RUN chmod 644 /etc/logrotate.conf
-# RUN chmod 644 /etc/logrotate.d/default_logrotate
-# RUN chmod 644 /etc/logrotate.d/libsimple.conf
-# 
-# # Remove the default supervisor configuration, which
-# # has a web interface we don't want, in favor of our
-# # own configuration files.
-# RUN rm /etc/supervisor/supervisord.conf
-# COPY supervisord.conf /etc/supervisor/
-# COPY cron.conf /etc/supervisor/conf.d
-# 
-# # remove logrotate for dpkg as we will do our own in the default_logrotate.
-# RUN rm -rf /etc/logrotate.d/dpkg
