--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 feedparser
 pillow
 psycopg2
-requests
-sqlalchemy>=1.0.6
+requests>=2.18.4
+sqlalchemy>=1.1.15
 nose
 lxml
 flask
 isbnlib
-tinys3
+tinys3>=0.1.12
 textblob
 rdflib
 elasticsearch==2.1.0
