--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "core"]
 	path = core
-	url = git@github.com:NYPL-Simplified/server_core.git
+	url = git@github.com:NYPL-Simplified/server_core@5ba4b17.git
 [submodule "docker"]
 	path = docker
 	url = git@github.com:NYPL-Simplified/circulation-docker.git
