Use 'auto' database task option by default

--- a/docker/Dockerfile.deploy
+++ b/docker/Dockerfile.deploy
@@ -4,7 +4,7 @@ MAINTAINER Library Simplified <info@librarysimplified.org>
 ARG version
 ARG repo="NYPL-Simplified/circulation"
 
-ENV SIMPLIFIED_DB_TASK "ignore"
+ENV SIMPLIFIED_DB_TASK "auto"
 
 # Copy over all Library Simplified build files for this image
 COPY . /ls_build
