--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core requirements
+boto3
 elasticsearch==2.1.0
 pillow
 psycopg2
@@ -8,7 +9,6 @@ flask-sqlalchemy-session
 lxml
 flask
 isbnlib
-tinys3==0.1.12
 nose
 python-dateutil
 uwsgi
